--- a/bike-ui/package.json
+++ b/bike-ui/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^12.0.2",
     "@angular/animations": "~12.0.1",
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
@@ -18,6 +19,10 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "bootstrap": "^5.0.1",
+    "cors": "^2.8.5",
+    "express-http-proxy": "^1.6.2",
+    "port": "^0.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
