--- a/bike-ui/tsconfig.json
+++ b/bike-ui/tsconfig.json
@@ -16,6 +16,7 @@
     "importHelpers": true,
     "target": "es2017",
     "noImplicitAny": false,
+    "strictPropertyInitialization": false,
     "module": "es2020",
     "lib": [
       "es2018",
